--- a/css/style.css
+++ b/css/style.css
@@ -72,12 +72,38 @@ ul.nav li {
   text-align: center;
 }
 
-ul.nav li:hover, #nav-btn:hover {
+ul.nav li:hover, div.menu-tab li:hover, #nav-btn:hover {
   background-color: #25463d;
 }
 
+/*phone menu stuff only*/
 #nav-btn {
   margin-right: 8px;
   float: right;
   height: 100%
+}
+
+div.menu-tab {
+  display: none;
+  position: fixed;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  background-color: #12231e;
+}
+
+div.menu-tab ul {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  list-style-type: none;
+}
+
+div.menu-tab li {
+  margin: 0;
+  padding: 12px 16px;
+  box-sizing: border-box;
+  color: #5DB199;
+  font-size: 16px;
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, "Verdana", "Arial", sans-serif;
 }
