--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url(//db.onlinewebfonts.com/c/09f6b2ba02572f19a7d7dd2b5f6494ad?family=Century+Gothic);
+@import url(//db.onlinewebfonts.com/c/09f6b2ba02572f19a7d7dd2b5f6494ad?family=Century+Gothic); /*remove this later*/
 
 body {
   margin: 0;
@@ -6,21 +6,10 @@ body {
 }
 
 div.col1, div.col2, div.col3 {
+  position: relative;
   margin: 0;
   padding: 0;
   float: left;
-}
-
-div.col1 {
-  width: 30%;
-}
-
-div.col2 {
-  width: 50%;
-}
-
-div.col3 {
-  width: 20%;
 }
 
 div.header {
@@ -29,8 +18,7 @@ div.header {
   margin: 0;
   padding: 0;
   width: 100%;
-  /*height is in js section*/
-  background-color: red; /*for testing purposes only*/
+  background-color: #09110f;
 }
 
 div.header img {
@@ -42,7 +30,8 @@ p.title, p.subtitle {
   position: fixed;
   margin: 0;
   padding: 0;
-  width: 100%;
+  left: 0;
+  width: 80%; /*change this to 100% if navbars are available*/
   color: #ffffff;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, "Verdana", "Arial", sans-serif;
   text-align: center;
@@ -57,4 +46,76 @@ p.title {
 p.subtitle {
   z-index: 2;
   font-size: 16px;
+}
+
+/*navigator stuff*/
+div.tab {
+  display: none; /*change this to enable tabs*/
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  background-color: #12231e;
+}
+
+ul.nav {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+ul.nav li {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0 16px;
+  float: left;
+  color: #5DB199;
+  font-size: 16px;
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, "Verdana", "Arial", sans-serif;
+  text-align: center;
+}
+
+ul.nav li:hover, div.menu-tab li:hover, div.sidebar li:hover, #nav-btn:hover {
+  background-color: #25463d;
+}
+
+/*phone menu stuff only*/
+#nav-btn {
+  margin-right: 8px;
+  float: right;
+  height: 100%
+}
+
+div.menu-tab {
+  display: none;
+  position: fixed;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  background-color: #12231e;
+}
+
+div.menu-tab ul, div.sidebar ul {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  list-style-type: none;
+}
+
+div.menu-tab li, div.sidebar li {
+  margin: 0;
+  padding: 12px 16px;
+  box-sizing: border-box;
+  color: #5DB199;
+  font-size: 16px;
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, "Verdana", "Arial", sans-serif;
+}
+
+/*sidebar*/
+div.sidebar {
+  position: fixed;
+  margin: 0;
+  padding: 0;
+  right: 0;
+  width: 20%;
+  background-color: #12231e;
 }
