--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url(//db.onlinewebfonts.com/c/09f6b2ba02572f19a7d7dd2b5f6494ad?family=Century+Gothic); /*remove this later*/
+@import url(//db.onlinewebfonts.com/c/09f6b2ba02572f19a7d7dd2b5f6494ad?family=Century+Gothic);
 
 body {
   margin: 0;
@@ -18,7 +18,8 @@ div.header {
   margin: 0;
   padding: 0;
   width: 100%;
-  background-color: #09110f;
+  /*height is in js section*/
+  background-color: #09110f; /*for testing purposes only*/
 }
 
 div.header img {
@@ -30,8 +31,7 @@ p.title, p.subtitle {
   position: fixed;
   margin: 0;
   padding: 0;
-  left: 0;
-  width: 80%; /*change this to 100% if navbars are available*/
+  width: 100%;
   color: #ffffff;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, "Verdana", "Arial", sans-serif;
   text-align: center;
@@ -48,9 +48,7 @@ p.subtitle {
   font-size: 16px;
 }
 
-/*navigator stuff*/
 div.tab {
-  display: none; /*change this to enable tabs*/
   margin: 0;
   padding: 0;
   width: 100%;
@@ -74,7 +72,7 @@ ul.nav li {
   text-align: center;
 }
 
-ul.nav li:hover, div.menu-tab li:hover, div.sidebar li:hover, #nav-btn:hover {
+ul.nav li:hover, div.menu-tab li:hover, #nav-btn:hover {
   background-color: #25463d;
 }
 
@@ -94,28 +92,18 @@ div.menu-tab {
   background-color: #12231e;
 }
 
-div.menu-tab ul, div.sidebar ul {
+div.menu-tab ul {
   margin: 0;
   padding: 0;
   width: 100%;
   list-style-type: none;
 }
 
-div.menu-tab li, div.sidebar li {
+div.menu-tab li {
   margin: 0;
   padding: 12px 16px;
   box-sizing: border-box;
   color: #5DB199;
   font-size: 16px;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, "Verdana", "Arial", sans-serif;
-}
-
-/*sidebar*/
-div.sidebar {
-  position: fixed;
-  margin: 0;
-  padding: 0;
-  right: 0;
-  width: 20%;
-  background-color: #12231e;
 }
