--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,18 @@
-@import url(//db.onlinewebfonts.com/c/09f6b2ba02572f19a7d7dd2b5f6494ad?family=Century+Gothic); /*remove this later*/
-
 body {
   margin: 0;
   padding: 0;
 }
 
-div.col1, div.col2, div.col3 {
-  position: relative;
+div#filler {
   margin: 0;
   padding: 0;
+}
+
+div.col1, div.col2, div.col3 {
+  position: static;
+  margin: 0;
+  padding: 0;
+  padding-top: 24px;
   float: left;
 }
 
@@ -23,15 +27,13 @@ div.header {
 
 div.header img {
   position: relative;
-  width: 100%;
 }
 
 p.title, p.subtitle {
   position: fixed;
   margin: 0;
   padding: 0;
-  left: 0;
-  width: 80%; /*change this to 100% if navbars are available*/
+  width: 100%;
   color: #ffffff;
   font-family: "Century Gothic", CenturyGothic, AppleGothic, "Verdana", "Arial", sans-serif;
   text-align: center;
@@ -50,9 +52,10 @@ p.subtitle {
 
 /*navigator stuff*/
 div.tab {
-  display: none; /*change this to enable tabs*/
+  position: fixed;
   margin: 0;
   padding: 0;
+  clear: both;
   width: 100%;
   background-color: #12231e;
 }
@@ -74,12 +77,12 @@ ul.nav li {
   text-align: center;
 }
 
-ul.nav li:hover, div.menu-tab li:hover, div.sidebar li:hover, #nav-btn:hover {
+ul.nav li:hover, div.menu-tab li:hover, .nav-btn:hover {
   background-color: #25463d;
 }
 
 /*phone menu stuff only*/
-#nav-btn {
+.nav-btn {
   margin-right: 8px;
   float: right;
   height: 100%
@@ -94,14 +97,14 @@ div.menu-tab {
   background-color: #12231e;
 }
 
-div.menu-tab ul, div.sidebar ul {
+div.menu-tab ul {
   margin: 0;
   padding: 0;
   width: 100%;
   list-style-type: none;
 }
 
-div.menu-tab li, div.sidebar li {
+div.menu-tab li {
   margin: 0;
   padding: 12px 16px;
   box-sizing: border-box;
@@ -110,12 +113,61 @@ div.menu-tab li, div.sidebar li {
   font-family: "Century Gothic", CenturyGothic, AppleGothic, "Verdana", "Arial", sans-serif;
 }
 
-/*sidebar*/
-div.sidebar {
-  position: fixed;
+/* Rest */
+
+div.topic {
+  overflow: hidden;
   margin: 0;
   padding: 0;
-  right: 0;
-  width: 20%;
-  background-color: #12231e;
+  width: 33%;
+  float: left;
+  background-color: grey;
+}
+
+div.topic img {
+  height: 100%;
+}
+
+p.description {
+  z-index: 1000;
+  display: none;
+  position: absolute;
+  margin-left: 20px;
+  bottom: 10px;
+  color: #ffffff;
+  font-size: 32px;
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, "Verdana", "Arial", sans-serif;
+}
+
+div.post {
+  margin: 0;
+  padding: 0 48px;
+  color: #12231e;
+  font-size: 18px;
+  font-family: "Verdana", "Arial", sans-serif;
+}
+
+div.post h1, div.post h2 {
+  color: #5DB199;
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, "Verdana", "Arial", sans-serif;
+}
+
+div.post img {
+  margin: auto;
+}
+
+input[type=text] {
+  margin: 0;
+  padding: 0 4px;
+  width: 130px;
+  height: 20px;
+  -webkit-transition: width 0.4s ease-in-out;
+  transition: width 0.4s ease-in-out;
+  background-color: #ffffff;
+  border: 1px solid lightgrey;
+  border-radius: 3px;
+}
+
+input[type=text]:focus {
+    width: 100%;
 }
