Major Website Update v1.5
- animated search bar, topic sections at home and title
- fixed phone navbar button
- images centered
- added favicon

Only thing left: contact us + social media

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,59 @@
+/*Animations*/
+@-webkit-keyframes split {
+    0% {letter-spacing: -2px;}
+    1% {letter-spacing: 6px;}
+    100% {letter-spacing: 6px;}
+}
+
+@keyframes split {
+    0% {letter-spacing: -2px;}
+    1% {letter-spacing: 6px;}
+    100% {letter-spacing: 6px;}
+}
+
+@-webkit-keyframes move-x {
+    0% {left: 0%;}
+    100% {left: -75%;}
+}
+
+@keyframes move-x {
+  0% {left: 0%;}
+  100% {left: -75%;}
+}
+
+p.title:hover {
+  -webkit-animation-name: split;
+  -webkit-animation-duration: 60s;
+  animation-name: split;
+  animation-duration: 60s;
+}
+
+div.topic img:hover {
+  -webkit-animation-name: move-x;
+  -webkit-animation-duration: 5s;
+  animation-name: move-x;
+  animation-duration: 10s;
+}
+
+@-webkit-keyframes split {
+    0% {letter-spacing: -2px;}
+    1% {letter-spacing: 6px;}
+    100% {letter-spacing: 6px;}
+}
+
+@keyframes split {
+    0% {letter-spacing: -2px;}
+    1% {letter-spacing: 6px;}
+    100% {letter-spacing: 6px;}
+}
+
 body {
   margin: 0;
   padding: 0;
+}
+
+a, a:link, a:hover, a:visited, a:active {
+  text-decoration: none;
 }
 
 div#filler {
@@ -77,15 +130,16 @@ ul.nav li {
   text-align: center;
 }
 
-ul.nav li:hover, div.menu-tab li:hover, .nav-btn:hover {
+ul.nav li:hover, div.menu-tab li:hover, .nav-btn:hover, #search:hover {
   background-color: #25463d;
 }
 
 /*phone menu stuff only*/
+
 .nav-btn {
   margin-right: 8px;
   float: right;
-  height: 100%
+  height: 100%;
 }
 
 div.menu-tab {
@@ -125,6 +179,7 @@ div.topic {
 }
 
 div.topic img {
+  position: relative;
   height: 100%;
 }
 
@@ -153,7 +208,17 @@ div.post h1, div.post h2 {
 }
 
 div.post img {
+  display: block;
   margin: auto;
+}
+
+#search, #search-bar {
+  margin: 0 4px;
+}
+
+#search-bar {
+  display: none;
+  width: 50px;
 }
 
 input[type=text] {
